<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marvi.tallerlistviewper_carros.Registro">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/str_registro_de_carros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="24sp" />


        <TextView
            android:text="@string/str_placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtPlaca"
            android:textSize="18sp"
            android:inputType="textCapWords" />

        <TextView
            android:text="@string/str_marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblMarca"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbMarca" />

        <TextView
            android:text="@string/str_modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblModelo"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbModelo" />

        <TextView
            android:text="@string/str_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblColor"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbColor" />

        <TextView
            android:text="@string/str_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblPrecio"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtPrecio"
            android:textColor="@android:color/holo_red_light" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/str_registroCarros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdRegistrar"
                android:layout_weight="1"
                android:onClick="regitrar" />

            <Button
                android:text="@string/str_borrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdBorrar"
                android:layout_weight="1"
                android:onClick="borrar" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
